some exception get caught

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,7 +28,9 @@ spring.servlet.multipart.max-request-size=1024MB
 prop.upload-folder=/root/webapp
 spring.resources.static-locations=classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/,file:${prop.upload-folder}
 
-
+logging.path=/root/webapp
+logging.file=springbootdemo.log
+logging.level.root=INFO
 
 
 
